# websearch-mcp

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml  test_web_search.py
src/websearch_mcp/: __init__.py  __main__.py  bfs_crawler.py  browser_fetch.py  cli.py  config.py  crawler.py  exceptions.py  fetch.py  hooks.py  link_extractor.py  llm.py  schema.py  search_handler.py  seed_manager.py  server.py  smart_fetch.py  trace.py  typesense_client.py
src/websearch_mcp/nodes/: __init__.py  evaluator.py  extractor.py  rewriter.py  search.py  skill_config.py  synthesizer.py
src/websearch_mcp/nodes/skills/: evaluator_skill.yaml  extractor_skill.yaml  rewriter_skill.yaml  synthesizer_skill.yaml
src/websearch_mcp/registries/: __init__.py  prompt_registry.py  resource_registry.py  tool_registry.py
tests/: __init__.py  readme_test.py  readme_test2.py  test_full_pipeline.py  test_mcp_tool.py  test_pipeline.py  test_search_agent.py
