[project]
name = "websearch-mcp"
version = "0.2.0"
description = "Self-hosted Tavily alternative. MCP server with deep research pipeline, smart fetch, and AI-powered insights."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ling Fan", email = "lingfan36@gmail.com"}
]
keywords = ["mcp", "search", "web-search", "ollama", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.0.0",
    "structlog>=24.0.0",
    "typesense>=2.0.0",
    "trafilatura>=1.6.0",
    "readabilipy>=0.3.0",
    "markdownify>=1.0.0",
    "protego>=0.3.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
websearch-mcp = "websearch_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]